# MatrixExp

./: .clangd  CMakeLists.txt  Manifest.toml  Project.toml  README.md  bench.jl  bench_notebook.jl  bench_notebook.jmd  build.sh  compile_commands.json
include/: MatrixExp.hpp
lib/: expm.cpp  expmd1.cpp  expmd1d1.cpp  expmd1d2.cpp  expmd2.cpp  expmd2d1.cpp  expmd2d2.cpp  expmd3.cpp  expmd3d1.cpp  expmd3d2.cpp  expmd4.cpp  expmd4d1.cpp  expmd4d2.cpp  expmd5.cpp  expmd5d1.cpp  expmd5d2.cpp  expmd6.cpp  expmd6d1.cpp  expmd6d2.cpp  expmd7.cpp  expmd7d1.cpp  expmd7d2.cpp  expmd8.cpp  expmd8d1.cpp  expmd8d2.cpp
src/: MatrixExp.cpp
